--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
         </section>
 
         <script>
-            const menuBtn = document.querySelector('.menu-btn')
-            const navlinks = document.querySelector('.nav-links')
-            menuBtn.addEventListener('click', () => {
-                navlinks.classList.toggle('.mobile-menu')
-            })
+            const menuBtn = document.querySelector(".menu-btn");
+            const navlinks = document.querySelector(".nav-links");
+            menuBtn.addEventListener("click", () => {
+                navlinks.classList.toggle(".mobile-menu")
+            });
         </script>
     </body>
 
