--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li class="active"><a href="#"></a>About</li>
                 <li class="ctn"><a href="#"></a>Contact</li>
             </ul>
-            <img src="./menu.png" alt="Error" class="menu-btn">
+            <img src="./images/menu.png" alt="Error" class="menu-btn">
         </nav>
         <header>
             <div class="header-content">
@@ -35,14 +35,14 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <img class="image1" src="./camp.jpg" alt="Error">
+                    <img class="image1" src="./images/camp.jpg" alt="Error">
                     <h4>Everest Camp Terk</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus vel tenetur asperiores fugiat
                         fugit ducimus illum exercitationem quidem consequuntur molestias!</p>
                     <a href="#" class="ctn">Learn More</a>
                 </div>
                 <div class="col">
-                    <img class="image2" src="./walk.jpg" alt="Error">
+                    <img class="image2" src="./images/walk.jpg" alt="Error">
                     <h4>Walking Holidays</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus vel tenetur asperiores fugiat
                         fugit ducimus illum exercitationem quidem consequuntur molestias!</p>
@@ -71,10 +71,10 @@
                 </div>
                 <div class="col image-col">
                     <div class="image-gallery">
-                        <img src="img1.jpg" alt="Error">
-                        <img src="img2.webp" alt="Error">
-                        <img src="img3.png" alt="Error">
-                        <img src="img4.jpg" alt="Error">
+                        <img src="./images/img1.jpg" alt="Error">
+                        <img src="./images/img2.webp" alt="Error">
+                        <img src="./images/img3.png" alt="Error">
+                        <img src="./images/img4.jpg" alt="Error">
                     </div>
                 </div>
             </div>
