--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             const menuBtn = document.querySelector(".menu-btn");
             const navlinks = document.querySelector(".nav-links");
             menuBtn.addEventListener("click", () => {
-                navlinks.classList.toggle(".mobile-menu")
+                navlinks.classList.toggle("mobile-menu")
             });
         </script>
     </body>
